--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+body{
+    background-color: #85FFBD;
+    background-image: linear-gradient(45deg, #85FFBD 0%, #FFFB7D 100%);
+
+}
 .col{
     margin-top: 30px;
     
@@ -25,4 +30,16 @@ i:hover{
     font-size: 70px;
     text-align: center;
     border: 1px solid black;
+    background-color: rgba(255, 255, 9, 0.264);
+}
+.etiquetadejugador{
+    text-align: center;
+    
+}
+.selecionada{
+    background-color: rgba(255, 0, 0, 0.618);
+    
+}
+.selecionada-n-2{
+    background-color: rgba(0, 0, 255, 0.497);
 }
